# data-guard

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  README.md  create_rule.py  hello.py  publish.sh  pyproject.toml
data_guard/: base_validator.py  quick_validate.py  rule.py  rules_mapper.py  validation_response.py  validator.py
data_guard/libs/: helpers.py  rule_creator.py  rule_template.txt
data_guard/rules/: accepted.py  accepted_if.py  between.py  decimal.py  email.py  gt.py  gte.py  integer.py  lt.py  lte.py  max.py  min.py  nullable.py  numeric.py  required.py  required_if.py  size.py  sometimes.py  string.py
tests/rules/: test_nullable_rule.py  test_required_if_rule.py  test_required_rule.py
